@@ -2,6 +2,12 @@
 			A very simple session manager
 			by Thomas Leonard
 
+25-Apr-2003
+~~~~~~~~~~~
+Close stdout when running child processes for users running startx from the
+console, since some terminal applications try to read from the console,
+freezing X (Keith R. John Warno).
+
 17-Apr-2003
 ~~~~~~~~~~~
 Added note in RunROX explaining the need for -n (suggested by Keith R. John
